syntax = "proto3";

package employee_service.requests.action.get_action;

import "employee-service/models/action.proto";

option go_package = "github.com/nicodanke/gesty-api/shared/proto/employee-service/requests/action";

message GetActionRequest {
    int64 id = 1;
}

message GetActionResponse {
    employee_service.models.action.Action action = 1;
}
